# mc-allowlist-sync

./: .dockerignore  Cargo.toml  Dockerfile  shell.nix
src/: allowlist.rs  config.rs  group.rs  main.rs  oidc.rs  rcon_conn.rs
