[package]
name = "mc-oauth-allowlist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = { version = "0.6", features = ["rt-tokio"] }
tokio = { version = "1", features = ["full"] }
openidconnect = "3.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
envy = "0.4"
futures = "0.3"
